--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>Hello world!</H1>
+    <div class="nav">
+        <div class="navelem1"><a href="https://friendly-helper.github.io/HTML-Hosting/" target="_blank" rel="noopener noreferrer">Index</a></div>
+        <div class="navelem2">Üdv, kedves {PHP változó helye} </div>
+        <div class="navelem3"><a href="https://friendly-helper.github.io/HTML-Hosting/login" target="_blank" rel="noopener noreferrer">Login</a></div>
+    </div>
+    
+    <div class="main">
+        <h1> "Hello World!"</h1>
+    </div> 
+    
 </body>
 </html>
