--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="nav">
-        <div class="navelem1"><a href="https://friendly-helper.github.io/HTML-Hosting/" target="_blank" rel="noopener noreferrer">Index</a></div>
+        <div class="navelem1"><a href="https://friendly-helper.github.io/HTML-Hosting/">Index</a></div>
         <div class="navelem2">Üdv, kedves {PHP változó helye} </div>
-        <div class="navelem3"><a href="https://friendly-helper.github.io/HTML-Hosting/login" target="_blank" rel="noopener noreferrer">Login</a></div>
+        <div class="navelem3"><a href="https://friendly-helper.github.io/HTML-Hosting/login">Login/logout page downloads</a></div>
     </div>
     
     <div class="main">
